--- a/src/components/page/legal/PrivacyPolicy.mdx
+++ b/src/components/page/legal/PrivacyPolicy.mdx
@@ -118,7 +118,9 @@ Personal Data processed: various types of Data as specified in the privacy polic
 
 Place of processing: United States &ndash;{" "}
 
-<a href="https://www.google.com/url?q=https://stripe.com/us/privacy&amp;sa=D&amp;source=editors&amp;ust=1627991888251000&amp;usg=AOvVaw0X8_osGFmsGrJiNGvysyQP">Privacy Policy</a>
+<a href="https://www.google.com/url?q=https://stripe.com/us/privacy&amp;sa=D&amp;source=editors&amp;ust=1627991888251000&amp;usg=AOvVaw0X8_osGFmsGrJiNGvysyQP">
+    Privacy Policy
+</a>
 
 .
 
@@ -137,11 +139,16 @@ Personal Data processed: Cookies; Usage Data.
 
 Place of processing: United States &ndash;{" "}
 
-<a href="https://www.google.com/url?q=https://www.google.com/intl/en/policies/privacy/&amp;sa=D&amp;source=editors&amp;ust=1627991888252000&amp;usg=AOvVaw2UFJkUK1TvohXN4RR2morr">Privacy Policy</a>
+<a href="https://www.google.com/url?q=https://www.google.com/intl/en/policies/privacy/&amp;sa=D&amp;source=editors&amp;ust=1627991888252000&amp;usg=AOvVaw2UFJkUK1TvohXN4RR2morr">
+    Privacy Policy
+</a>
 
 &nbsp;&ndash;
 
-<a href="https://www.google.com/url?q=https://tools.google.com/dlpage/gaoptout?hl%3Den&amp;sa=D&amp;source=editors&amp;ust=1627991888252000&amp;usg=AOvVaw1LgZNQO-_T_OCPPW08gwCp">Opt Out</a>.
+<a href="https://www.google.com/url?q=https://tools.google.com/dlpage/gaoptout?hl%3Den&amp;sa=D&amp;source=editors&amp;ust=1627991888252000&amp;usg=AOvVaw1LgZNQO-_T_OCPPW08gwCp">
+    Opt Out
+</a>
+.
 
 #### Data transfer outside the EU
 
@@ -215,7 +222,11 @@ Personal Data processed: various types of Data as specified in the privacy polic
 
 Place of processing: United States &ndash;{" "}
 
-<a href="https://www.google.com/url?q=https://stripe.com/terms/US&amp;sa=D&amp;source=editors&amp;ust=1627991888256000&amp;usg=AOvVaw34Fso-efXCiT66mlinR-4V"> Privacy Policy </a>.
+<a href="https://www.google.com/url?q=https://stripe.com/terms/US&amp;sa=D&amp;source=editors&amp;ust=1627991888256000&amp;usg=AOvVaw34Fso-efXCiT66mlinR-4V">
+    {' '}
+    Privacy Policy{' '}
+</a>
+.
 
 #### Hosting and backend infrastructure
 
@@ -232,19 +243,28 @@ Personal Data processed: various types of Data as specified in the privacy polic
 
 Place of processing: United States &ndash;{" "}
 
-<a href="https://www.google.com/url?q=https://aws.amazon.com/compliance/data-privacy-faq/&amp;sa=D&amp;source=editors&amp;ust=1627991888257000&amp;usg=AOvVaw0KLohbCSOTFSyDB4XDozCi">Privacy Policy</a>
+<a href="https://www.google.com/url?q=https://aws.amazon.com/compliance/data-privacy-faq/&amp;sa=D&amp;source=editors&amp;ust=1627991888257000&amp;usg=AOvVaw0KLohbCSOTFSyDB4XDozCi">
+    Privacy Policy
+</a>
 
 ; Ireland &ndash;
 
-<a href="https://www.google.com/url?q=https://aws.amazon.com/compliance/data-privacy-faq/&amp;sa=D&amp;source=editors&amp;ust=1627991888258000&amp;usg=AOvVaw3XDtpjChSFclXRbkEyILka">Privacy Policy</a>
+<a href="https://www.google.com/url?q=https://aws.amazon.com/compliance/data-privacy-faq/&amp;sa=D&amp;source=editors&amp;ust=1627991888258000&amp;usg=AOvVaw3XDtpjChSFclXRbkEyILka">
+    Privacy Policy
+</a>
 
 ; France &ndash;
 
-<a href="https://www.google.com/url?q=https://aws.amazon.com/compliance/data-privacy-faq/&amp;sa=D&amp;source=editors&amp;ust=1627991888258000&amp;usg=AOvVaw3XDtpjChSFclXRbkEyILka">Privacy Policy</a>
+<a href="https://www.google.com/url?q=https://aws.amazon.com/compliance/data-privacy-faq/&amp;sa=D&amp;source=editors&amp;ust=1627991888258000&amp;usg=AOvVaw3XDtpjChSFclXRbkEyILka">
+    Privacy Policy
+</a>
 
 ; Australia &ndash;
 
-<a href="https://www.google.com/url?q=https://aws.amazon.com/compliance/data-privacy-faq/&amp;sa=D&amp;source=editors&amp;ust=1627991888258000&amp;usg=AOvVaw3XDtpjChSFclXRbkEyILka">Privacy Policy</a>.
+<a href="https://www.google.com/url?q=https://aws.amazon.com/compliance/data-privacy-faq/&amp;sa=D&amp;source=editors&amp;ust=1627991888258000&amp;usg=AOvVaw3XDtpjChSFclXRbkEyILka">
+    Privacy Policy
+</a>
+.
 
 #### Registration and authentication
 
@@ -266,7 +286,10 @@ Personal Data processed: Cookies; email address; first name; last name; password
 
 Place of processing: United States &ndash;{" "}
 
-<a href="https://www.google.com/url?q=https://policies.google.com/privacy?hl%3Den-US&amp;sa=D&amp;source=editors&amp;ust=1627991888260000&amp;usg=AOvVaw1oqZ1UHTiUSCbsu8I_PoC_">Privacy Policy</a>.
+<a href="https://www.google.com/url?q=https://policies.google.com/privacy?hl%3Den-US&amp;sa=D&amp;source=editors&amp;ust=1627991888260000&amp;usg=AOvVaw1oqZ1UHTiUSCbsu8I_PoC_">
+    Privacy Policy
+</a>
+.
 
 ##### Github
 
@@ -355,7 +378,9 @@ by the Owner as early as possible and always within one month.
 
 QwerkyStudio.com uses Trackers. To learn more, the User may consult the
 
-<a href="https://www.google.com/url?q=https://www.iubenda.com/privacy-policy/gdpr/60587211/cookie-policy?ifr%3Dtrue%26height%3D480%26newmarkup%3Dno&amp;sa=D&amp;source=editors&amp;ust=1627991888264000&amp;usg=AOvVaw1gaSfEF2283205AV6B1I9k">Cookie Policy</a>
+<a href="https://www.google.com/url?q=https://www.iubenda.com/privacy-policy/gdpr/60587211/cookie-policy?ifr%3Dtrue%26height%3D480%26newmarkup%3Dno&amp;sa=D&amp;source=editors&amp;ust=1627991888264000&amp;usg=AOvVaw1gaSfEF2283205AV6B1I9k">
+    Cookie Policy
+</a>
 
 .
 
